# catbird

./: .gitignore  Directory.Build.props  Directory.Build.rsp  README.md
MSBuild/: Banner.txt  BannerTask.cs  BannerTask.targets
aws-crt/: aws-crt.csproj
aws-crt-auth/: aws-crt-auth.csproj
aws-crt-http/: aws-crt-http.csproj
native/: CMakeLists.txt
native/playground/: playground.cpp
